--- a/humblib/src/index.html
+++ b/humblib/src/index.html
@@ -14,7 +14,14 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
+  <body
+    style="
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: stretch;
+    "
+  >
     <app-root></app-root>
   </body>
 </html>
